# bonanza

./: .bazelignore
.claude/hooks/: provision-bazel-deps.sh  session-start.sh
cmd/bonanza_builder/: main.go
cmd/bonanza_scheduler/: main.go
deployments/demo/: bonanza_builder.jsonnet  bonanza_scheduler.jsonnet  bonanza_storage_shard.jsonnet
doc/evaluations/: arrow-flight.md
pkg/arrow_flight_eval/: BUILD.bazel  adapter.go  benchmark_test.go  doc.go
pkg/bazelclient/arguments/: parse_command_and_arguments.go  parse_command_and_arguments_test.go
pkg/bazelclient/arguments/generator/: main.go
pkg/model/analysis/: BUILD.bazel  action_readers.go  analysis_failure_info.go  base_computer.go  computer.json  configured_aspect.go  configured_target.go  file_root.go  file_root_test.go  module_extension_repos.go  package.go  parameter_file.go  parameter_file_test.go  repo.go  repo_platform_host_path.go  repo_platform_host_path_internal_test.go  semantics_version.go  target_action_command.go  target_reference_actions.go  user_defined_transition.go
pkg/model/core/buffered/: object_manager.go
pkg/model/evaluation/: executor.go  recursive_computer.go  recursive_computer_test.go
pkg/model/starlark/: BUILD.bazel  aspect.go  attr.go  builtins.go  encode_compiled_program.go  encode_compiled_program_test.go  file.go  label.go  named_function.go  parse_repo_dot_bazel.go  parse_repo_dot_bazel_test.go  path.go  repo_registrar.go  rule.go  struct.go  target_reference.go  target_registrar.go  transition.go
pkg/proto/configuration/bonanza_scheduler/: bonanza_scheduler.pb.go  bonanza_scheduler.proto
pkg/proto/model/analysis/: analysis.pb.go  analysis.proto
pkg/proto/model/evaluation/cache/: cache.pb.go  cache.proto
pkg/proto/model/starlark/: starlark.pb.go  starlark.proto
pkg/storage/dag/grpc/: uploader.go
pkg/storage/object/local/: BUILD.bazel  persistent_epoch_list.go  persistent_epoch_list_test.go
starlark/bazel_tools/command_line_option/: BUILD.bazel
starlark/bazel_tools/fragments/: BUILD.bazel  fragments.bzl
starlark/bazel_tools/src/tools/launcher/: BUILD  stub_rules.bzl
starlark/builtins_core/: exports.bzl  wrappers.bzl
tools/e2e/: README.md  run.sh
tools/e2e/testproject/: .gitignore  BUILD.bazel  MODULE.bazel  action_edges_template.txt  aspects.bzl  defs.bzl  flag_enum.bzl  repo_conformance.bzl
