load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "arrow_flight_eval",
    srcs = [
        "adapter.go",
        "doc.go",
    ],
    importpath = "bonanza.build/pkg/arrow_flight_eval",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/buildqueuestate",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "arrow_flight_eval_test",
    srcs = ["benchmark_test.go"],
    embed = [":arrow_flight_eval"],
    deps = [
        "//pkg/proto/buildqueuestate",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
