load("@rules_go//extras:gomock.bzl", "gomock")
load("@rules_go//go:def.bzl", "go_library", "go_test")

genrule(
    name = "generate_computer",
    srcs = ["computer.json"],
    outs = ["computer.go"],
    cmd = "$(location //pkg/model/evaluation/generate_computer) $(location computer.json) > $@",
    tools = ["//pkg/model/evaluation/generate_computer"],
)

go_library(
    name = "analysis",
    srcs = [
        "action_encoders.go",
        "action_readers.go",
        "action_result.go",
        "analysis_failure_info.go",
        "base_computer.go",
        "build_specification.go",
        "canonical_repo_name.go",
        "compatible_execution_platforms.go",
        "compatible_toolchains_for_type.go",
        "compiled_bzl_file.go",
        "computer.go",
        "configured_aspect.go",
        "configured_target.go",
        "directory_creation_parameters.go",
        "directory_readers.go",
        "empty_default_info.go",
        "exec_transition.go",
        "file_access_parameters.go",
        "file_creation_parameters.go",
        "file_properties_value.go",
        "file_reader.go",
        "file_root.go",
        "files_in_package.go",
        "files_root.go",
        "glob.go",
        "http_archive_contents.go",
        "http_file_contents.go",
        "module_dot_bazel_contents.go",
        "module_extension_repo.go",
        "module_extension_repo_names.go",
        "module_extension_repos.go",
        "module_final_build_list.go",
        "module_registry_urls.go",
        "module_repo_mapping.go",
        "module_rough_build_list.go",
        "modules_with_multiple_versions.go",
        "modules_with_overrides.go",
        "modules_with_remote_overrides.go",
        "package.go",
        "package_group_contains.go",
        "packages_at_and_below.go",
        "raw_action_result.go",
        "registered_execution_platforms.go",
        "registered_fetch_platform.go",
        "registered_repo_platform.go",
        "registered_toolchains.go",
        "registered_toolchains_for_type.go",
        "repo.go",
        "repo_platform_host_path.go",
        "repository_rule_object.go",
        "resolved_toolchains.go",
        "root_module.go",
        "rule_implementation_wrappers.go",
        "select.go",
        "stable_input_root_path.go",
        "successful_action_result.go",
        "target.go",
        "target_action.go",
        "target_action_command.go",
        "target_action_input_root.go",
        "target_action_result.go",
        "target_completion.go",
        "target_output.go",
        "target_pattern_expansion.go",
        "target_provider.go",
        "target_providers.go",
        "used_module_extension.go",
        "used_module_extensions.go",
        "user_defined_transition.go",
        "visible_target.go",
    ],
    importpath = "bonanza.build/pkg/model/analysis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/crypto",
        "//pkg/diff",
        "//pkg/ds",
        "//pkg/glob",
        "//pkg/label",
        "//pkg/model/command",
        "//pkg/model/core",
        "//pkg/model/core/btree",
        "//pkg/model/core/inlinedtree",
        "//pkg/model/encoding",
        "//pkg/model/evaluation",
        "//pkg/model/executewithstorage",
        "//pkg/model/filesystem",
        "//pkg/model/parser",
        "//pkg/model/starlark",
        "//pkg/proto/encryptedaction",
        "//pkg/proto/model/analysis",
        "//pkg/proto/model/command",
        "//pkg/proto/model/core",
        "//pkg/proto/model/fetch",
        "//pkg/proto/model/filesystem",
        "//pkg/proto/model/starlark",
        "//pkg/remoteexecution",
        "//pkg/search",
        "//pkg/starlark",
        "//pkg/starlark/unpack",
        "//pkg/storage/object",
        "@com_github_bluekeyes_go_gitdiff//gitdiff",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/pool",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_kballard_go_shellquote//:go-shellquote",
        "@com_github_ulikunitz_xz//:xz",
        "@net_starlark_go//starlark",
        "@net_starlark_go//syntax",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",  # keep
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sync//semaphore",
    ],
)

go_test(
    name = "analysis_test",
    srcs = [
        "base_computer_test.go",
        "file_root_test.go",
        "mocks_analysis_test.go",
        "mocks_encoding_test.go",
        "mocks_filesystem_pool_test.go",
        "mocks_filesystem_test.go",
    ],
    embed = [":analysis"],
    deps = [
        "//pkg/model/core",
        "//pkg/model/encoding",
        "//pkg/model/filesystem",
        "//pkg/model/parser",
        "//pkg/model/starlark",
        "//pkg/proto/model/analysis",
        "//pkg/proto/model/core",
        "//pkg/proto/model/filesystem",
        "//pkg/proto/model/starlark",
        "//pkg/proto/storage/object",
        "//pkg/storage/object",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",  # keep
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",  # keep
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_golang_x_sync//semaphore",
        "@org_uber_go_mock//gomock",
    ],
)

gomock(
    name = "mocks_analysis",
    out = "mocks_analysis_test.go",
    interfaces = [
        "ExecutionClientForTesting",
        "FileRootEnvironmentForTesting",
    ],
    library = "//pkg/model/analysis",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "analysis_test",
)

gomock(
    name = "mocks_encoding",
    out = "mocks_encoding_test.go",
    interfaces = ["DeterministicBinaryEncoder"],
    library = "//pkg/model/encoding",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "analysis_test",
)

gomock(
    name = "mocks_filesystem_pool",
    out = "mocks_filesystem_pool_test.go",
    interfaces = ["FilePool"],
    library = "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/pool",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "analysis_test",
)

gomock(
    name = "mocks_filesystem",
    out = "mocks_filesystem_test.go",
    interfaces = [
        "Directory",
        "FileReadWriter",
    ],
    library = "@com_github_buildbarn_bb_storage//pkg/filesystem",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "analysis_test",
)
